<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:gravity="bottom">
    <TextView
        android:id="@+id/name_header_drw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/status_header_drw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"/>
    <TextView
        android:id="@+id/email_header_drw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_email_com"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"/>

</LinearLayout>